--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,13 +15,18 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="dropdown">
-      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <a class="btn btn-secondary dropdown-toggle"
+         role="button" id="dropdownMenuLink"
+         data-toggle="dropdown"
+         aria-haspopup="true"
+         aria-expanded="false"
+         style="cursor: pointer">
         Manage Recipe
       </a>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" style="cursor: pointer">
         <a class="dropdown-item" (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a>
-        <a class="dropdown-item" >Edit Recipe</a>
-        <a class="dropdown-item" >Delete Recipe</a>
+        <a class="dropdown-item" style="cursor: pointer">Edit Recipe</a>
+        <a class="dropdown-item" style="cursor: pointer">Delete Recipe</a>
       </div>
     </div>
   </div>
