--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -25,7 +25,7 @@
       </a>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" style="cursor: pointer">
         <a class="dropdown-item" (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a>
-        <a class="dropdown-item" style="cursor: pointer">Edit Recipe</a>
+        <a class="dropdown-item" style="cursor: pointer" (click)="onEditRecipe()">Edit Recipe</a>
         <a class="dropdown-item" style="cursor: pointer">Delete Recipe</a>
       </div>
     </div>
